--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-hans">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
 </head>
